# container_rs

./: Cargo.toml  README.md  flake.nix  test.sh
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: xv80pdxmsv50dqabv98py6br2s79q4sj-source
src/: capabilities.rs  child.rs  cli.rs  config.rs  container.rs  errors.rs  hostname.rs  ipc.rs  main.rs  mounts.rs  namespaces.rs  resources.rs  syscalls.rs
testbin/: Cargo.toml
