[package]
name = "crabcan"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.22"
env_logger = "0.11.6"
clap = { version = "4.5.26", features = ["derive"] }
nix = { version = "0.29.0", features = [
    "feature",
    "hostname",
    "mount",
    "fs",
    "user",
    "socket",
    "sched",
    ] }
rand = "0.8.5"
scan_fmt = "0.2.6"
capctl = "0.2.4"
syscallz = "0.17.0"
libc = "0.2.169"
rlimit = "0.10.2"
